# simple-sell

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: ai_service.py  main.py  schemas.py
backend/eval/: eval.py  evaluation_results.json  groundtruth.json  schemas.py
backend/tests/: test_health.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AnalyzingPhase.tsx  ApiKeyInput.tsx  IdlePhase.tsx  ImageDropzone.tsx  ListingField.tsx  Navbar.tsx  ResultPhase.tsx
frontend/src/lib/: analyzeItem.ts
frontend/src/types/: listing.ts
