[project]
name = "simple-sell"
version = "0.1.0"
description = "An online classifieds platform where users upload item photos and the system auto-fills listing details (title, description, category, price)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "instructor[google-genai]>=1.15.1",
    "python-dotenv>=1.2.2",
]
