[project]
name = "simple-sell"
version = "0.1.0"
description = "An online classifieds platform where users upload item photos and the system auto-fills listing details (title, description, category, price)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.2",
    "groq>=1.4.0",
    "instructor[google-genai]>=1.15.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
