[project]
name = "simple-sell"
version = "1.0.0"
description = "An online classifieds platform where users upload item photos and the system auto-fills listing details (title, description, category, price)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.2",
    "groq>=1.4.0",
    "instructor[google-genai]>=1.15.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
